--- a/index.html
+++ b/index.html
@@ -1,161 +1,160 @@
 <!DOCTYPE html>
 <html lang="es">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="/assets/images/icon/favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href="assets/css/estilos.css">
-        <title> Estudios de Ciencia, Tecnología y Sociedad </title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="/assets/images/icon/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="assets/css/estilos.css">
+    <title> Estudios de Ciencia, Tecnología y Sociedad </title>
+</head>
 
-    <body>
-        <header id="home">
-            <div class="header-container">
-                <nav>
-                    <a href="index.html" class="nav-brand ects-link">ECTS</a>
-                    <a href="#" class="menu"><svg xmlns="http://www.w3.org/2000/svg" height="36" width="36" viewBox="0 96 960 960" width="24">
-                            <path fill="white" d="M120 816v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z" />
-                        </svg></a>
-                    <div>
-                        <ul class="nav-links">
-                            <li><a href="#home">Inicio</a>
-                            </li>
-                            <li><a href="#main">Temas</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <img src="../assets/images/icon/logo2.jpg" alt="logo" width="50" class="home-logo logo"
-                        loading="lazy">
-                </nav>
-                <div class="home-title">
-                    <div class="home-header"> Estudios de Ciencia, Tecnología y Sociedad </div>
+<body>
+    <header id="home">
+        <div class="header-container">
+            <nav>
+                <a href="index.html" class="nav-brand ects-link">ECTS</a>
+                <a href="#" class="menu"><svg xmlns="http://www.w3.org/2000/svg" height="36" width="36"
+                        viewBox="0 96 960 960" width="24">
+                        <path fill="white" d="M120 816v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z" />
+                    </svg></a>
+                <div>
+                    <ul class="nav-links">
+                        <li><a href="#home">Inicio</a>
+                        </li>
+                        <li><a href="#main">Temas</a>
+                        </li>
+                    </ul>
                 </div>
-                <div class="home-button-container">
-                    <a href="#main" class="home-button">
-                        <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 96 960 960" width="24">
-                            <path fill="white"
-                                d="M480 896 160 576l56-57 224 224V256h80v487l224-224 56 57-320 320Z" />
-                        </svg>
-                    </a>
+                <img src="../assets/images/icon/logo2.jpg" alt="logo" width="50" class="home-logo logo" loading="lazy">
+            </nav>
+            <div class="home-title">
+                <div class="home-header"> Estudios de Ciencia, Tecnología y Sociedad </div>
+            </div>
+            <div class="home-button-container">
+                <a href="#main" class="home-button">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 96 960 960" width="24">
+                        <path fill="white" d="M480 896 160 576l56-57 224 224V256h80v487l224-224 56 57-320 320Z" />
+                    </svg>
+                </a>
+            </div>
+        </div>
+    </header>
+    <main id="main">
+        <section class="content" id="content">
+            <div class="content-title"> Temas principales </div>
+            <div class="topic-cards">
+                <div class="card">
+                    <div class="card-body">
+                        <img src="assets/images/cards/card-1.webp" alt="" width="300" height="170" class="card-image">
+                        <div class="card-title"> Tema I - Introducción </div>
+                    </div>
+                    <div class="card-footer">
+                        <div class="card-description">
+                        </div>
+                        <a href="pages/topic_1.html" class="card-button">Leer más</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-body">
+                        <img src="assets/images/cards/card-2.webp" alt="" width="300" height="170" class="card-image">
+                        <div class="card-title"> Tema II - Enfoque social de la ciencia </div>
+                    </div>
+                    <div class="card-footer">
+                        <div class="card-description"> description... </div>
+                        <a href="pages/topic_2.html" class="card-button">Leer más</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-body">
+                        <img src="assets/images/cards/card-3.webp" alt="" width="300" height="170" class="card-image">
+                        <div class="card-title"> Tema III - Ética y sociedad </div>
+                    </div>
+                    <div class="card-footer">
+                        <div class="card-description"> description... </div>
+                        <a href="pages/topic_3.html" class="card-button">Leer más</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-body">
+                        <img src="assets/images/cards/card-4.webp" alt="" width="300" height="170" class="card-image">
+                        <div class="card-title"> Tema IV - Dimensión ambiental </div>
+                    </div>
+                    <div class="card-footer">
+                        <div class="card-description"> description... </div>
+                        <a href="#" class="card-button">Leer más</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-body">
+                        <img src="assets/images/background_5.webp" alt="" width="300" height="170" class="card-image">
+                        <div class="card-title"> Tema V - Enfrentamiento climático </div>
+                    </div>
+                    <div class="card-footer">
+                        <div class="card-description"> description... </div>
+                        <a href="#" class="card-button">Leer más</a>
+                    </div>
                 </div>
             </div>
-        </header>
-        <main id="main">
-            <section class="content" id="content">
-                <div class="content-title"> Temas principales </div>
-                <div class="topic-cards">
-                    <div class="card">
-                        <div class="card-body">
-                            <img src="assets/images/cards/card-1.webp" alt="" width="300" height="170" class="card-image">
-                            <div class="card-title"> Tema I - Introducción </div>
-                        </div>
-                        <div class="card-footer">
-                            <div class="card-description">
-                            </div>
-                            <a href="pages/topic_1.html" class="card-button">Leer más</a>
-                        </div>
+        </section>
+        <section class="others-container" id="others">
+            <div class="others-title"> Otros temas </div>
+            <div class="topic-cards">
+                <div class="card">
+                    <div class="card-body">
+                        <img src="assets/images/cards/card_other-1.webp" alt="" width="300" height="170"
+                            class="card-image">
+                        <div class="card-title"> Cambio climático y repercusión social </div>
                     </div>
-                    <div class="card">
-                        <div class="card-body">
-                            <img src="assets/images/cards/card-2.webp" alt="" width="300" height="170" class="card-image">
-                            <div class="card-title"> Tema II - Enfoque social de la ciencia </div>
+                    <div class="card-footer">
+                        <div class="card-description">
                         </div>
-                        <div class="card-footer">
-                            <div class="card-description"> description... </div>
-                            <a href="pages/topic_2.html" class="card-button">Leer más</a>
-                        </div>
+                        <a href="pages/others_1.html" class="card-button">Leer más</a>
                     </div>
-                    <div class="card">
-                        <div class="card-body">
-                            <img src="assets/images/cards/card-3.webp" alt="" width="300" height="170" class="card-image">
-                            <div class="card-title"> Tema III - Ética y sociedad </div>
-                        </div>
-                        <div class="card-footer">
-                            <div class="card-description"> description... </div>
-                            <a href="#" class="card-button">Leer más</a>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-body">
-                            <img src="assets/images/cards/card-4.webp" alt="" width="300" height="170" class="card-image">
-                            <div class="card-title"> Tema IV - Dimensión ambiental </div>
-                        </div>
-                        <div class="card-footer">
-                            <div class="card-description"> description... </div>
-                            <a href="#" class="card-button">Leer más</a>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-body">
-                            <img src="assets/images/background_5.webp" alt="" width="300" height="170" class="card-image">
-                            <div class="card-title"> Tema V - Enfrentamiento climático </div>
-                        </div>
-                        <div class="card-footer">
-                            <div class="card-description"> description... </div>
-                            <a href="#" class="card-button">Leer más</a>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="others-container" id="others">
-                <div class="others-title"> Otros temas </div>
-                <div class="topic-cards">
-                    <div class="card">
-                        <div class="card-body">
-                            <img src="assets/images/cards/card_other-1.webp" alt="" width="300" height="170" class="card-image">
-                            <div class="card-title"> Cambio climático y repercusión social </div>
-                        </div>
-                        <div class="card-footer">
-                            <div class="card-description">
-                            </div>
-                            <a href="pages/others_1.html" class="card-button">Leer más</a>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="support-container" id="support">
-                <div class="support-title"> Material de apoyo </div>
-                <div class="apk-container">
-                    <a href="#" class="apk" target="_blank">
-                        <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 96 960 960" width="24">
-                            <path
-                                d="M40 816q9-107 65.5-197T256 476l-74-128q-6-9-3-19t13-15q8-5 18-2t16 12l74 128q86-36 180-36t180 36l74-128q6-9 16-12t18 2q10 5 13 15t-3 19l-74 128q94 53 150.5 143T920 816H40Zm240-110q21 0 35.5-14.5T330 656q0-21-14.5-35.5T280 606q-21 0-35.5 14.5T230 656q0 21 14.5 35.5T280 706Zm400 0q21 0 35.5-14.5T730 656q0-21-14.5-35.5T680 606q-21 0-35.5 14.5T630 656q0 21 14.5 35.5T680 706Z" />
-                        </svg> Estudios de Ciencia, Tecnología y Sociedad </a>
-                    <a href="https://apklis.cu/application/com.irdev.tareavida2021" class="apk" target="_blank">
-                        <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 96 960 960" width="24">
-                            <path
-                                d="M40 816q9-107 65.5-197T256 476l-74-128q-6-9-3-19t13-15q8-5 18-2t16 12l74 128q86-36 180-36t180 36l74-128q6-9 16-12t18 2q10 5 13 15t-3 19l-74 128q94 53 150.5 143T920 816H40Zm240-110q21 0 35.5-14.5T330 656q0-21-14.5-35.5T280 606q-21 0-35.5 14.5T230 656q0 21 14.5 35.5T280 706Zm400 0q21 0 35.5-14.5T730 656q0-21-14.5-35.5T680 606q-21 0-35.5 14.5T630 656q0 21 14.5 35.5T680 706Z" />
-                        </svg> Tarea Vida </a>
-                </div>
-            </section>
-            <a href="#home" class="floating-button">
-                <svg xmlns="http://www.w3.org/2000/svg" height="24"
-                    viewBox="0 96 960 960" width="24">
-                    <path fill="white" d="M440 896V409L216 633l-56-57 320-320 320 320-56 57-224-224v487h-80Z" />
-                </svg>
-            </a>
-        </main>
-        <footer>
-            <div class="footer-container">
-                <div class="footer-links">
-                    <h3>Enlaces </h3>
-                    <a href="#content">Temas principales</a>
-                    <a href="#others">Otros temas</a>
-                    <a href="#support">Material de apoyo</a>
-                </div>
-                <div class="footer-credits">
-                    <h3>Créditos</h3>
-                    <span>Addiel A. Moldes González - <i>Desarrollador</i></span>
-                    <span>Denis A. Alvarez Albelo - <i>Desarrollador</i></span>
-                    <span>M Sc. Leonardo Castillo Martínez - <i>Profesor</i></span>
                 </div>
             </div>
-            <div class="footer-copy">
-                <a href="https://www.uci.cu" target="_blank">Universidad de las Ciencias Informáticas</a>, 2023
+        </section>
+        <section class="support-container" id="support">
+            <div class="support-title"> Material de apoyo </div>
+            <div class="apk-container">
+                <a href="#" class="apk" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 96 960 960" width="24">
+                        <path
+                            d="M40 816q9-107 65.5-197T256 476l-74-128q-6-9-3-19t13-15q8-5 18-2t16 12l74 128q86-36 180-36t180 36l74-128q6-9 16-12t18 2q10 5 13 15t-3 19l-74 128q94 53 150.5 143T920 816H40Zm240-110q21 0 35.5-14.5T330 656q0-21-14.5-35.5T280 606q-21 0-35.5 14.5T230 656q0 21 14.5 35.5T280 706Zm400 0q21 0 35.5-14.5T730 656q0-21-14.5-35.5T680 606q-21 0-35.5 14.5T630 656q0 21 14.5 35.5T680 706Z" />
+                    </svg> Estudios de Ciencia, Tecnología y Sociedad </a>
+                <a href="https://apklis.cu/application/com.irdev.tareavida2021" class="apk" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 96 960 960" width="24">
+                        <path
+                            d="M40 816q9-107 65.5-197T256 476l-74-128q-6-9-3-19t13-15q8-5 18-2t16 12l74 128q86-36 180-36t180 36l74-128q6-9 16-12t18 2q10 5 13 15t-3 19l-74 128q94 53 150.5 143T920 816H40Zm240-110q21 0 35.5-14.5T330 656q0-21-14.5-35.5T280 606q-21 0-35.5 14.5T230 656q0 21 14.5 35.5T280 706Zm400 0q21 0 35.5-14.5T730 656q0-21-14.5-35.5T680 606q-21 0-35.5 14.5T630 656q0 21 14.5 35.5T680 706Z" />
+                    </svg> Tarea Vida </a>
             </div>
-        </footer>
-    </body>
+        </section>
+        <a href="#home" class="floating-button">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 96 960 960" width="24">
+                <path fill="white" d="M440 896V409L216 633l-56-57 320-320 320 320-56 57-224-224v487h-80Z" />
+            </svg>
+        </a>
+    </main>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-links">
+                <h3>Enlaces </h3>
+                <a href="#content">Temas principales</a>
+                <a href="#others">Otros temas</a>
+                <a href="#support">Material de apoyo</a>
+            </div>
+            <div class="footer-credits">
+                <h3>Créditos</h3>
+                <span>Addiel A. Moldes González - <i>Desarrollador</i></span>
+                <span>Denis A. Alvarez Albelo - <i>Desarrollador</i></span>
+                <span>M Sc. Leonardo Castillo Martínez - <i>Profesor</i></span>
+            </div>
+        </div>
+        <div class="footer-copy">
+            <a href="https://www.uci.cu" target="_blank">Universidad de las Ciencias Informáticas</a>, 2023
+        </div>
+    </footer>
+</body>
 
 </html>
