--- a/pages/topic_2.html
+++ b/pages/topic_2.html
@@ -183,9 +183,46 @@
                         </div>
                     </div>
                     <div class="subtopic-container" id="subtopic_3">
-                        <div class="subtopic-title">3. Visión CTS de la ciencia</div>
+                        <div class="subtopic-title">3. Visión CTS de la ciencia.</div>
                         <div class="subtopic">
-
+                            <p>
+                                <strong style="margin-bottom: 0;">Aspectos importantes</strong>
+                            <ol style="margin-top: 0;">
+                                <li>Supera visiones tradicionales de la ciencia y la tecnología que subvaloran
+                                    o ignoran las determinaciones e impactos sociales del desarrollo
+                                    científico y tecnológico.</li>
+                                <li>La ciencia y la tecnología son
+                                    procesos sociales profundamente marcados por la civilización donde han crecido</li>
+                                <li>El desarrollo científico y tecnológico requiere de una estimación cuidadosa
+                                    de sus fuerzas motrices e impactos, un conocimiento profundo de sus
+                                    interrelaciones con la sociedad.</li>
+                                <li>Exponer una interpretación de la ciencia y la tecnología como procesos
+                                    sociales, es decir, como complejas empresas en las que los valores
+                                    culturales, políticos y económicos ayudan a configurar el proceso que, a su
+                                    vez, incide sobre dichos valores y sobre la sociedad que los mantiene</li>
+                            </ol>
+                            </p>
+                            <p>
+                                <strong>Comparación C.Tradicional y CTS</strong>
+                            <figure>
+                                <img src="../assets/images/topic_2/comparacion.png" alt="cuba" class="responsive"
+                                    width="500" loading="lazy">
+                                <figcaption><i>Comparación entre C.Tradicional y CTS</i></figcaption>
+                            </figure>
+                            </p>
+                            <p>
+                                <strong>Otros elementos</strong>
+                                <br>
+                                La concepción de la ciencia como una actividad social específica dirigida a la
+                                producción, difusión y aplicación de conocimientos y, por tanto, esencialmente
+                                cognoscitiva, pero que se desarrolla en interacción con las restantes dimensiones de la
+                                actividad, de modo que tiene que ser comprendida en su inserción dentro de la sociedad,
+                                como un todo orgánico y dinámico.
+                                <br><br>
+                                La actividad científica se realiza en instituciones sociales con determinada red de
+                                intereses y con patrones culturales (normas, valores, etc.) que son decisivos en la
+                                producción y validación del conocimiento
+                            </p>
                         </div>
                     </div>
                 </div>
