--- a/pages/topic_3.html
+++ b/pages/topic_3.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="../assets/images/icon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../assets/css/estilos.css">
     <link rel="stylesheet" href="../assets/css/pages.css">
-    <link rel="stylesheet" href="../assets/css/topic_2.css">
+    <link rel="stylesheet" href="../assets/css/topic_3.css">
     <title>Enfoque Social de la Ciencia</title>
 </head>
 
@@ -23,7 +23,7 @@
                 <img src="../assets/images/icon/logo2.jpg" alt="logo" width="50" class="logo" loading="lazy">
             </nav>
             <div class="home-title">
-                <div class="home-header">Enfoque Social de la Ciencia</div>
+                <div class="home-header">Ética y Sociedad</div>
             </div>
             <div class="home-button-container">
                 <a href="#main" class="home-button">
@@ -37,160 +37,46 @@
     <div class="body-content">
         <main id="main">
             <section id="content" class="content">
-                <div class="content-title">Enfoque social de la ciencia. Marco conceptual del enfoque CTS</div>
+                <div class="content-title">Enfoque ético de la ciencia y la tecnología</div>
                 <div class="container">
                     <div class="subtopic-container" id="subtopic_1">
-                        <div class="subtopic-title">1. La visión tradicional de la ciencia y el tránsito hacia el
-                            enfoque social. </div>
+                        <div class="subtopic-title">1. Ética: definiciones y lugar dentro del enfoque CTS. </div>
                         <div class="subtopic">
                             <p>
-                                <strong>Situación problemática</strong>
-                                <br> Uno de los aspectos básicos de este tema está en analizar, no solo los
-                                conceptos de Ciencia, Tecnología y Sociedad, sino también de establecer cuáles son
-                                las relaciones de interdependencia que se establecen entre ellas. <br><br> Existen
-                                dos concepciones o visiones para dar respuesta a estas interrogantes: <br>
-                            <ul>
-                                <li>La Visión Heredada de la ciencia , también llamada Visión Tradicional de la
-                                    ciencia y la tecnología</li>
-                                <li>Visión CTS</li>
-                            </ul>
-                            </p>
-                            <p>
-                                <strong>¿Qué es la Concepción Heredada de la ciencia?</strong>
-                                <br> Prácticamente desde la Comunidad Primitiva hasta los años 50 del siglo XX
-                                predominó un enfoque lógico- positivista sobre el papel de la ciencia y la
-                                tecnología en el desarrollo social. <br> Un papel determinante dentro de la
-                                sistematización de esta concepción lo jugó el llamado <b>“Círculo de Viena”</b>
-                                surgido en Europa entre los años 1929 y 1938, el cual se encargó de la consolidación
-                                de una concepción tradicional o heredada de la ciencia capaz de difundir una
-                                determinada imagen clásica, ya preestablecida, de la ciencia.
-                            <figure>
-                                <img src="../assets/images/topic_2/viena.png" alt="cuba" class="responsive" width="500"
-                                    loading="lazy">
-                                <figcaption><i>Círculo de Viena 1929-1938</i></figcaption>
-                            </figure>
-                            </p>
+                                <strong>Concepto de Ética</strong>
                             <blockquote>
                                 <p style="text-align: justify;">
-                                    <i>“Esta denominada concepción tradicional de la ciencia, es preciso
-                                        comprenderla como un conjunto de ideas, postulados, preceptos cánones y
-                                        prejuicios, establecidos por diferentes entidades, disciplinas científicas y
-                                        pensadores que durante siglos han ido conformando una visión fragmentada,
-                                        limitada, estática y contradictoria sobre la actividad
-                                        científico-tecnológica. Visión esta que no ha logrado desentrañar a plenitud
-                                        el entramado histórico-social de esta peculiar y polifacética forma de
-                                        actividad humana”.</i>
+                                    La ética, en tanto disciplina filosófica, estudia el origen, estructura, esencia y
+                                    regularidades del desarrollo histórico de la moral. Como ciencia
+                                    filosófica ha estado tradicionalmente dedicada al análisis científico de los
+                                    procesos, relaciones y comportamiento moral de los hombres en
+                                    sociedad, así como, también, a investigar, fundamentar y valorar, teóricamente, el
+                                    sistema de principios, normas, valores, cualidades e ideales morales desde tiempos
+                                    pretéritos..
                                 </p>
-                                <div class="quote-footer"><span class="quote-footer-text">Fidel Martínez Álvarez.
-                                        Hacia una visión integral de la ciencia y la tecnología.<sup><a href="#biblio-1"
-                                                class="biblio-links">1</a></sup></span>
+                                <div class="quote-footer"><span class="quote-footer-text">López Bombino, Luis R. “El
+                                        saber ético de ayer a hoy” (tomo II) Editorial Félix Varela, Ciudad de la
+                                        Habana.<sup><a href="#" class="biblio-links">1</a></sup></span>
                                 </div>
                             </blockquote>
-                            <br>
-                            <p>
-                                <strong>Ideas básicas de la Concepción Heredada de la ciencia:</strong>
-                                <br>
-                            <ol>
-                                <li>La ciencia es una <u>actividad teórica</u> cuyo producto son las teorías
-                                    científicas.</li>
-                                <li>Brinda una visión del desarrollo científico como algo progresivo, acumulativo,
-                                    encaminado al bienestar humano. <u>Esto ofrece una visión optimista de la
-                                        ciencia.</u> </li>
-                                <li>El objetivo de la ciencia es la búsqueda de la verdad a través del método
-                                    científico. <u>Las teorías científicas son cada vez más verdaderas, amplias y
-                                        precisas.</u> </li>
-                            </ol>
-                            <figure>
-                                <img src="../assets/images/topic_2/visión_tradicional.png" alt="cuba" class="responsive"
-                                    width="500" loading="lazy">
-                                <figcaption><i>La ciencia y el progreso social. Visión general.</i></figcaption>
-                            </figure>
-                            </p>
-                            <br>
-                            <p>
-                                <strong>Crítica a la concepción tradicional.</strong>
-                                <br> Pero en los años 60 se habían acumulado numerosas evidencias de que el
-                                desarrollo científico y tecnológico podía traer consecuencias negativas a la
-                                sociedad a través de su uso militar, el impacto ecológico u otras vías por lo cual
-                                se fue afirmando una preocupación ética y política en relación con la ciencia y la
-                                tecnología que marcó el carácter de los estudios sobre ellas. Se formó una especie
-                                de consenso básico:
-                            <blockquote>
-                                <p style="text-align: justify;">
-                                    <i>“Si bien la ciencia y la tecnología nos proporcionan numerosos y positivos
-                                        beneficios, también traen consigo impactos negativos, de los cuales algunos
-                                        son imprevisibles, pero todos ellos reflejan los valores, perspectivas y
-                                        visiones de quienes están en condiciones de tomar decisiones concernientes
-                                        al conocimiento científico y tecnológico”.</i>
-                                </p>
-                                <div class="quote-footer"><span class="quote-footer-text">Cuctliffe, 1990,
-                                        pp.23-24</span></div>
-                            </blockquote> El paradigma lógico positivista proyectaba una imagen formalista y
-                            abstracta de la ciencia que a mediados de los años 50 recibió una crítica severa en la
-                            obra de diferentes autores, en particular de Thomas Samuel Kuhn en su libro “La
-                            Estructura de las revoluciones científicas” aparecido en 1962. </p>
                         </div>
                     </div>
                     <div class="subtopic-container" id="subtopic_2">
-                        <div class="subtopic-title">2. El giro historicista de Kuhn y el enfoque social de la
-                            ciencia.</div>
+                        <div class="subtopic-title">2. La Ética Informática: definición y necesidad.</div>
                         <div class="subtopic">
-                            <figure>
-                                <img src="../assets/images/topic_2/Kuhn.jpg" height="300" width="auto" alt="cuba"
-                                    class="responsive" width="500" loading="lazy">
-                                <figcaption><i>Thomas S. Kuhn</i></figcaption>
-                            </figure>
-                            <p> Representó la toma de conciencia de la <b>dimensión social histórica de la
-                                    ciencia</b> y de la necesidad de abordar su estudio desde una <b>perspectiva
-                                    interdisciplinaria</b> , que no imponga modelos de ciencia, sino que los
-                                extraiga de su historia real. </p>
-                            <p>
-                                <strong>Principales aportes de Kuhn:</strong>
-                            <div class="mincontent">
-                                <p class="mincontent-item" style="margin-right: 5%;"><u> Comunidades científicas:</u>
-                                    <br>
-                                    Como sujetos colectivos que, de acuerdo con su actitud y
-                                    comportamiento ante el paradigma compartido, desempeñan un papel
-                                    esencial en la producción y cambio del conocimiento científico.
-                                </p>
-                                <p class="mincontent-item" style="margin-left: 5%;"> <u>Cambio Cientifico:</u>
-                                    <br>
-                                    Como un Proceso revolucionario en el que se gesta el
-                                    consenso de la comunidad alrededor de un nuevo paradigma.
-                                </p>
-                            </div>
-                            </p>
-                            <p>
-                                <strong>Limitaciones</strong>
-                                <br>
-                                Cuando considera los valores que comparten los miembros de una comunidad se refiere a
-                                preferencias por la exactitud, determinaciones cuantitativas, sencillez, coherencia,
-                                probabilidad de explicaciones y solo de pasada menciona como un valor la utilidad social
-                                de la Ciencia.
-                                <br><br>
-                                La noción de Ciencia como actividad de las comunidades científicas permite la
-                                introducción de factores sociosicológicos en el análisis, pero la cohesión de las
-                                comunidades alrededor de paradigmas les proporciona cierto aislamiento respecto a los
-                                contextos sociales.
-                                <br><br>
-                                La tesis de Kuhn subraya la relativa autonomía de la Ciencia. Según Engels, una
-                                necesidad técnica impulsa más a la Ciencia que 10 Universidades, por tanto, no hay
-                                acumulación del conocimiento al margen de las demandas sociales.
-                                <br><br>
-                                El modelo kunhiano carece de una adecuada caracterización de lo social. Su noción
-                                de comunidad es intuitiva. No busca las raíces sociales que nutren a la Ciencia.
-                            </p>
+                            
                         </div>
                     </div>
                     <div class="subtopic-container" id="subtopic_3">
-                        <div class="subtopic-title">3. Visión CTS de la ciencia</div>
+                        <div class="subtopic-title">3. Principales problemas éticos generados por
+                            las TIC.</div>
                         <div class="subtopic">
 
                         </div>
                     </div>
                 </div>
             </section>
-            <section class="content" id="cont-5">
+            <!-- <section class="content" id="cont-5">
                 <div class="content-title">Vea también</div>
                 <div class="links">
                     <div class="apk-container">
@@ -202,18 +88,18 @@
                             </svg> La Ciencia y la Tecnología como procesos sociales (pdf)</a>
                     </div>
                 </div>
-            </section>
+            </section> -->
             <section class="content biblio" id="cont-6">
                 <div class="content-title">Bibliografía consultada</div>
                 <div class="container">
-                    <div class="subtopic-container" id="subtopic_5">
+                    <!-- <div class="subtopic-container" id="subtopic_5">
                         <ol>
                             <li id="biblio-1">Fidel Martínez Álvarez . Hacia una visión integral de la ciencia y la
                                 tecnología. <a target="_blank" href="http://www.oei.es/salactsi/vision.htm"
                                     class="biblio-links">http://www.oei.es/salactsi/vision.htm</a>
                             </li>
                         </ol>
-                    </div>
+                    </div> -->
                 </div>
             </section>
             <section id="page-nav">
